manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: heath-cit270-loadbalancer
spec:
  selector:
    app: heath-cit270
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
