ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: heath-cit270-dev-ingress
  namespace: heath-cit270-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-cluster-issuer'
spec:
  tls:
    - hosts:
        - heathnodejs.cit270.com
      secretName: heath-cit270-dev-tls
  rules:
    - host: heathnodejs.cit270.com
      http:
        paths:
          - backend:
            serviceName: heath-cit270-loadbalancer
            servicePort: 80
